# vms-engine

./: .clang-format  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.image  README.md  docker-compose.run.yml  docker-compose.yml  skills-lock.json
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/engine/core/builders/: ibuilder_factory.hpp  ielement_builder.hpp  ipipeline_builder.hpp
core/include/engine/core/config/: config_types.hpp  iconfig_parser.hpp  iconfig_validator.hpp
core/include/engine/core/eventing/: event_types.hpp
core/include/engine/core/handlers/: ievent_handler.hpp  ihandler.hpp  ihandler_manager.hpp
core/include/engine/core/messaging/: imessage_consumer.hpp  imessage_producer.hpp
core/include/engine/core/pipeline/: ipipeline_manager.hpp  pipeline_state.hpp  runtime_source_control_types.hpp
core/include/engine/core/recording/: ismart_record_controller.hpp
core/include/engine/core/runtime/: iruntime_param_manager.hpp
core/include/engine/core/services/: iexternal_inference_client.hpp
core/include/engine/core/storage/: istorage_manager.hpp
core/include/engine/core/utils/: gst_utils.hpp  logger.hpp  spdlog_logger.hpp  uuid_v7_generator.hpp
core/src/utils/: spdlog_logger.cpp  uuid_v7_generator.cpp
domain/: CMakeLists.txt
domain/include/engine/domain/: event_processor.hpp  metadata_parser.hpp  runtime_param_rules.hpp
domain/src/: runtime_param_rules.cpp
infrastructure/: CMakeLists.txt
infrastructure/config_parser/include/engine/infrastructure/config_parser/: yaml_config_parser.hpp
infrastructure/config_parser/src/: yaml_config_parser.cpp  yaml_parser_control_api.cpp  yaml_parser_control_messaging.cpp  yaml_parser_evidence.cpp  yaml_parser_handlers.cpp  yaml_parser_helpers.hpp  yaml_parser_messaging.cpp  yaml_parser_outputs.cpp  yaml_parser_pipeline.cpp  yaml_parser_processing.cpp  yaml_parser_queues.cpp  yaml_parser_sources.cpp  yaml_parser_visuals.cpp
infrastructure/control/include/engine/infrastructure/control/: runtime_control_handler.hpp  runtime_control_message_consumer.hpp
infrastructure/control/src/: runtime_control_handler.cpp  runtime_control_message_consumer.cpp
infrastructure/messaging/include/engine/infrastructure/messaging/: kafka_adapter.hpp  kafka_consumer.hpp  kafka_producer.hpp  redis_stream_consumer.hpp  redis_stream_producer.hpp
infrastructure/messaging/src/: kafka_adapter.cpp  kafka_consumer.cpp  kafka_producer.cpp  redis_stream_consumer.cpp  redis_stream_producer.cpp
infrastructure/rest_api/include/engine/infrastructure/rest_api/: pistache_server.hpp
infrastructure/rest_api/src/: pistache_server.cpp
infrastructure/storage/include/engine/infrastructure/storage/: s3_storage_manager.hpp  (+1 more)
infrastructure/storage/src/: local_storage_manager.cpp  s3_storage_manager.cpp
pipeline/: CMakeLists.txt
pipeline/include/engine/pipeline/: builder_factory.hpp  config_validator.hpp  pipeline_builder.hpp  pipeline_manager.hpp  runtime_stream_manager.hpp  smart_record_controller.hpp  source_identity_registry.hpp  source_naming.hpp
pipeline/include/engine/pipeline/block_builders/: outputs_block_builder.hpp  processing_block_builder.hpp  source_block_builder.hpp  visuals_block_builder.hpp
pipeline/include/engine/pipeline/builders/: analytics_builder.hpp  capsfilter_builder.hpp  demuxer_builder.hpp  encoder_builder.hpp  infer_builder.hpp  msgbroker_builder.hpp  msgconv_builder.hpp  muxer_builder.hpp  nvmultiurisrcbin_builder.hpp  nvurisrcbin_builder.hpp  osd_builder.hpp  parser_builder.hpp  queue_builder.hpp  sink_builder.hpp  source_builder.hpp  tiler_builder.hpp  tracker_builder.hpp  video_convert_builder.hpp
pipeline/include/engine/pipeline/event_handlers/: crop_detected_obj_handler.hpp  ext_proc_handler.hpp  handler_manager.hpp  object_crop.hpp  smart_record_handler.hpp
pipeline/include/engine/pipeline/evidence/: evidence_request_service.hpp  frame_evidence_cache.hpp  frame_image_materializer.hpp
pipeline/include/engine/pipeline/extproc/: ext_proc_svc.hpp  frame_events_ext_proc_service.hpp
pipeline/include/engine/pipeline/linking/: pipeline_linker.hpp
pipeline/include/engine/pipeline/probes/: class_id_namespace_handler.hpp  crop_object_handler.hpp  ext_proc_svc.hpp  frame_events_probe_handler.hpp  probe_handler_manager.hpp  smart_record_probe_handler.hpp
pipeline/src/: builder_factory.cpp  config_validator.cpp  pipeline_builder.cpp  pipeline_manager.cpp  runtime_stream_manager.cpp  smart_record_controller.cpp  source_identity_registry.cpp
pipeline/src/block_builders/: outputs_block_builder.cpp  processing_block_builder.cpp  source_block_builder.cpp  visuals_block_builder.cpp
pipeline/src/builders/: analytics_builder.cpp  capsfilter_builder.cpp  demuxer_builder.cpp  encoder_builder.cpp  infer_builder.cpp  msgbroker_builder.cpp  msgconv_builder.cpp  muxer_builder.cpp  nvmultiurisrcbin_builder.cpp  nvurisrcbin_builder.cpp  osd_builder.cpp  parser_builder.cpp  queue_builder.cpp  sink_builder.cpp  source_builder.cpp  tiler_builder.cpp  tracker_builder.cpp  video_convert_builder.cpp
pipeline/src/event_handlers/: crop_detected_obj_handler.cpp  ext_proc_handler.cpp  handler_manager.cpp  smart_record_handler.cpp
pipeline/src/evidence/: evidence_request_service.cpp  frame_evidence_cache.cpp  frame_image_materializer.cpp
pipeline/src/extproc/: ext_proc_svc.cpp  frame_events_ext_proc_service.cpp
pipeline/src/linking/: pipeline_linker.cpp
pipeline/src/probes/: class_id_namespace_handler.cpp  crop_object_handler.cpp  ext_proc_svc.cpp  frame_events_probe_handler.cpp  probe_handler_manager.cpp  smart_record_probe_handler.cpp
plugins/: CMakeLists.txt
plugins/src/: nvdsinfer_custom_impl_Yolo.cpp  nvdsinfer_custom_impl_Yolo_face.cpp  nvdsinfer_custom_impl_Yolo_padded.cpp  nvdsinfer_person_attrib_deepmar.cpp  nvdsinfer_person_attrib_deepmar_24label.cpp  ocr_fast_plate_parser.cpp  ocr_fast_plate_parser_vn.cpp
services/: CMakeLists.txt
services/include/engine/services/: triton_inference_client.hpp
services/src/: placeholder.cpp  triton_inference_client.cpp
(+92 files in other folders)
